--- a/backend/package.json
+++ b/backend/package.json
@@ -6,6 +6,7 @@
     "scripts": {
         "start": "node server.js",
         "dev": "nodemon server.js",
+        "create-admin": "node scripts/create-admin.js",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "keywords": [
@@ -17,13 +18,13 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
-        "express": "^4.18.2",
-        "mongoose": "^7.5.0",
+        "bcryptjs": "^2.4.3",
         "cors": "^2.8.5",
         "dotenv": "^16.3.1",
-        "bcryptjs": "^2.4.3",
-        "jsonwebtoken": "^9.0.2",
+        "express": "^4.18.2",
         "helmet": "^7.0.0",
+        "jsonwebtoken": "^9.0.2",
+        "mongoose": "^7.5.0",
         "morgan": "^1.10.0"
     },
     "devDependencies": {
