--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,9 +2,9 @@ name: Deploy to Production
 
 on:
   push:
-    branches: [ main ]
+    branches: [ main, master ]
   pull_request:
-    branches: [ main ]
+    branches: [ main, master ]
 
 jobs:
   test:
@@ -54,7 +54,7 @@ jobs:
   deploy:
     needs: test
     runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/main'
+    if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/master'
     
     steps:
     - uses: actions/checkout@v3
@@ -64,30 +64,20 @@ jobs:
       with:
         node-version: 20.x
         cache: 'npm'
-        cache-dependency-path: |
-          frontend/package-lock.json
-          backend/package-lock.json
+        cache-dependency-path: frontend/package-lock.json
     
-    - name: Install dependencies
+    - name: Install frontend dependencies
       run: |
-        cd frontend && npm ci
-        cd ../backend && npm ci
+        cd frontend
+        npm ci
     
     - name: Build frontend
       run: |
         cd frontend
         npm run build
     
-    - name: Deploy to server
-      uses: appleboy/ssh-action@v0.1.5
+    - name: Deploy to GitHub Pages
+      uses: peaceiris/actions-gh-pages@v3
       with:
-        host: ${{ secrets.HOST }}
-        username: ${{ secrets.USERNAME }}
-        key: ${{ secrets.SSH_KEY }}
-        port: ${{ secrets.PORT }}
-        script: |
-          cd /path/to/your/app
-          git pull origin main
-          cd backend && npm install --production
-          cd ../frontend && npm install && npm run build
-          pm2 restart ravboss-backend || pm2 start ecosystem.config.js
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        publish_dir: ./frontend/dist
