--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,77 +1,30 @@
-name: Deploy to Production
+name: Deploy to GitHub Pages
 
 on:
   push:
-    branches: [ main, master ]
-  pull_request:
-    branches: [ main, master ]
+    branches: [ master, main ]
 
 jobs:
-  test:
+  build-and-deploy:
     runs-on: ubuntu-latest
     
-    strategy:
-      matrix:
-        node-version: [18.x, 20.x]
-        
     steps:
-    - uses: actions/checkout@v3
+    - name: Checkout
+      uses: actions/checkout@v3
     
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v3
-      with:
-        node-version: ${{ matrix.node-version }}
-        cache: 'npm'
-        cache-dependency-path: |
-          frontend/package-lock.json
-          backend/package-lock.json
-    
-    - name: Install frontend dependencies
-      run: |
-        cd frontend
-        npm ci
-    
-    - name: Install backend dependencies
-      run: |
-        cd backend
-        npm ci
-    
-    - name: Run frontend tests
-      run: |
-        cd frontend
-        npm run test --if-present
-    
-    - name: Run backend tests
-      run: |
-        cd backend
-        npm run test --if-present
-    
-    - name: Build frontend
-      run: |
-        cd frontend
-        npm run build
-
-  deploy:
-    needs: test
-    runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/master'
-    
-    steps:
-    - uses: actions/checkout@v3
-    
-    - name: Use Node.js 20.x
+    - name: Setup Node.js
       uses: actions/setup-node@v3
       with:
         node-version: 20.x
         cache: 'npm'
         cache-dependency-path: frontend/package-lock.json
     
-    - name: Install frontend dependencies
+    - name: Install dependencies
       run: |
         cd frontend
         npm ci
     
-    - name: Build frontend
+    - name: Build
       run: |
         cd frontend
         npm run build
