--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "ravboss-root",
-  "version": "1.0.0",
+  "name": "ravboss-frontend",
   "private": true,
+  "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "cd frontend && npm run build",
-    "deploy": "cd frontend && npm run deploy",
-    "preview": "vite preview"
+    "build": "vite build",
+    "preview": "vite preview",
+    "deploy": "vite build && gh-pages -d dist"
   },
   "dependencies": {
     "axios": "^1.12.2",
@@ -17,6 +17,7 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.2.3",
+    "gh-pages": "^6.3.0",
     "sass": "^1.93.2",
     "vite": "^4.4.5"
   }
