--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^1.12.2",
+    "masonry-layout": "^4.2.2",
     "pinia": "^2.1.6",
     "tilt.js": "^1.2.1",
     "vanilla-tilt": "^1.8.1",
