--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "ravboss-frontend",
   "private": true,
+  "homepage": "https://catboss1995.github.io/ravBoss.com",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "vite build && node scripts/copy-404.js",
     "preview": "vite preview",
     "deploy": "vite build && gh-pages -d dist"
   },
@@ -17,7 +18,8 @@
     "tilt.js": "^1.2.1",
     "vanilla-tilt": "^1.8.1",
     "vue": "^3.3.4",
-    "vue-router": "^4.2.4"
+    "vue-router": "^4.2.4",
+    "gh-pages": "^6.1.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.2.3",
