--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,8 +16,9 @@ jobs:
       uses: actions/setup-node@v3
       with:
         node-version: 20.x
-        cache: 'npm'
-        cache-dependency-path: frontend/package-lock.json
+        # 移除緩存設定，因為 package-lock.json 可能不在指定路徑
+        # cache: 'npm'
+        # cache-dependency-path: frontend/package-lock.json
     
     - name: Install dependencies
       run: |
